# python-playground

./: docker-compose.yml
ai/langgraph/01/: test.py
ai/langgraph/02/: test.py
context-manager/: test.py
rag/: SQL_SCHEMA.sql  pyproject.toml
rag/rag/: .env.example  NOTES.md  app.py  auth.py  chatbot.py  main.py  open-webui-tool.py  schema.json  utils.py  weaviate_client.py  weaviate_retriever.py
rag/rag/open-webui/: funzionante.py  openwebui_tool.py  search_webui_tool.py  test_tool.py
rag/streamlit/: app.py
rag/streamlit/pages/: search.py  show_objects.py
