[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Niko! <nicola.ranaldo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
dotenv = "^0.9.9"
authlib = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
